--- a/project-ips/src/ui/MainNav.module.css
+++ b/project-ips/src/ui/MainNav.module.css
@@ -11,6 +11,8 @@
     padding: 1.2rem 2.4rem;
     transition: all 0.3s;
     text-decoration: none;
+    font-weight: 500;
+    font-size: 1.1em;
   }
 
   /* This works because react-router places the active class on the active NavLink */
@@ -31,7 +33,6 @@
   list-style-type: none;
   padding-left: 0;
 }
-
 
 .mainNav {
   padding-top: 3em;
