--- a/project-ips/src/ui/MainNav.module.css
+++ b/project-ips/src/ui/MainNav.module.css
@@ -11,8 +11,9 @@
     padding: 1.2rem 2.4rem;
     transition: all 0.3s;
     text-decoration: none;
-    font-weight: 500 ;
+    font-weight: 500;
     font-size: 0.9em;
+    text-align: center;
   }
 
   /* This works because react-router places the active class on the active NavLink */
