--- a/project-ips/src/ui/Text.module.css
+++ b/project-ips/src/ui/Text.module.css
@@ -1,10 +1,11 @@
 .text {
     font-size: 1em;
-    max-width: 60%;
+    max-width: 65%;
 }
 
 .textContainer {
     display: flex;
     margin: auto;
-    justify-content: center;
+    justify-content: justify;
+    padding-left: 35em;
 }
