--- a/project-ips/src/ui/MainNav.module.css
+++ b/project-ips/src/ui/MainNav.module.css
@@ -1,19 +1,16 @@
 .navLink {
-  &:link,
+ &:link,
   &:visited {
     display: flex;
     align-items: center;
     gap: 1.2rem;
 
     color: var(--color-grey-600);
-    font-size: 1.3rem;
+    font-size: 1.6rem;
     font-weight: 500;
     padding: 1.2rem 2.4rem;
     transition: all 0.3s;
     text-decoration: none;
-    font-weight: 500;
-    font-size: 0.9em;
-    text-align: center;
   }
 
   /* This works because react-router places the active class on the active NavLink */
@@ -21,9 +18,23 @@
   &:active,
   &.active:link,
   &.active:visited {
-    color: var(--color-grey-700);
-    background-color: var(--color-grey-100);
+    color: var(--color-grey-800);
+    background-color: var(--color-grey-50);
     border-radius: var(--border-radius-sm);
+  }
+
+  & svg {
+    width: 2.4rem;
+    height: 2.4rem;
+    color: var(--color-grey-400);
+    transition: all 0.3s;
+  }
+
+  &:hover svg,
+  &:active svg,
+  &.active:link svg,
+  &.active:visited svg {
+    color: var(--color-brand-600);
   }
 }
 
@@ -33,11 +44,6 @@
   gap: 0.8rem;
   list-style-type: none;
   padding-left: 0;
-}
-.navList span {
-  display: flex;
-  justify-content: center;
-  margin: auto;
 }
 
 .mainNav {
