--- a/project-ips/src/ui/AppLayout.module.css
+++ b/project-ips/src/ui/AppLayout.module.css
@@ -13,11 +13,10 @@
   font-weight: 200;
 }
 
-.appLayout Header {
+.appLayout header {
   background-color: var(--color-grey-0);
 }
 
 .appLayout main {
-    background-color: var(--color-grey-100);
-
+  background-color: var(--color-grey-100);
 }
