--- a/project-ips/src/ui/SideBar.module.css
+++ b/project-ips/src/ui/SideBar.module.css
@@ -1,9 +1,14 @@
 .sidebar {
-
-  background-color: var(--color-grey-0);
+  grid-row: 1 / -1;    /* span all rows so it stays full height */
+  grid-column: 1 / 2;
+  position: sticky;    /* only the sidebar is sticky */
+  top: 0;
+  align-self: start;   /* helps the sticky behave consistently */
+  height: 100vh;
+  overflow-y: auto;    /* if menu grows, sidebar will scroll internally */
   padding: 3.2rem 2.4rem;
+  background-color: var(--color-grey-0);
   border-right: 1px solid var(--color-grey-100);
-  grid-row: 1 / -1;
 
   display: flex;
   flex-direction: column;
